# kube-rs-test

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
platform/: Cargo.toml
platform/crds/: foo-crd.yaml
platform/src/: crdgen.rs  lib.rs  main.rs  manager.rs  telemetry.rs
scripts/: cluster.sh
src/: lib.rs  main.rs
src/commands/: crdgen.rs  mod.rs  server.rs
src/k8sserver/: health.rs  metrics.rs  mod.rs
src/manager/: metrics.rs  mod.rs
