[package]
name = "platform"
version = "0.1.0"
edition = "2018"

[features]
default = []
telemetry = []

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
actix-rt = "2.1.0"
actix-web = "4.0.0-beta.8"
futures = "0.3.15"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.60.0", default-features = true, features = ["derive"] }
kube-runtime = "0.60.0"
kube-derive = "0.60.0"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_22"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.24"
schemars = { version = "0.8.3", features = ["chrono"] }
serde_yaml = "0.8.17"
maplit = "1.0.2"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.18", features = ["json"] }
tracing-opentelemetry = "0.12.0"
opentelemetry = { version = "0.13.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.6.0", features = ["tokio"] }
prometheus = "0.12.0"